# taxes-taixable

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
agent/: README.md  instructions.md  openapi.tools.json
evals/: golden_cases.json  run_evals.py
scripts/: build_reference_corpus.py  build_special_regimes.py  ingest_elastic.py
src/taixable_copilot/: chat.py  citations.py  coverage.py  crossborder.py  embeddings.py  guardrails.py  knowledge.py  legislation.py  llm.py  memo.py  models.py  obligations.py  rates.py  redaction.py  residency.py  search.py  spend_guard.py  taxbands.py  topic_guard.py  treaty.py
src/taixable_copilot/api/: app.py  auth.py  deps.py  schemas.py
src/taixable_copilot/data/: SOURCES.md  legislation.json  residency_rules.yaml  tax_bands.json  treaty_articles.json  withholding_rates.json
src/taixable_copilot/db/: repository.py  schema.sql
src/taixable_copilot/web/: index.html
tests/: conftest.py  test_api.py  test_auth.py  test_chat.py  test_citations.py  test_coverage.py  test_coverage_matrix.py  test_e2e_local.py  test_guardrails.py  test_knowledge.py  test_legislation.py  test_llm.py  test_memo.py  test_models.py  test_obligations.py  test_rates.py  test_redaction.py  test_reference_corpus.py  test_repository.py  test_residency.py  test_search.py  test_special_regimes.py  test_spend_guard.py  test_taxbands.py  test_treaty.py
