[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "taixable-copilot"
version = "0.1.0"
description = "Cross-Border Tax Obligations Copilot — a Gemini + Google Cloud Agent Builder agent using Elastic (MCP) for curated tax-legislation retrieval."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "taixable" }]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "elasticsearch>=8.13",
    "PyMySQL>=1.1",
    "SQLAlchemy>=2.0",
    "python-dotenv>=1.0",
    "PyYAML>=6.0",
    "Jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "ruff>=0.4",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
